<resources>
    <string name="app_name">Movies</string>
    <string name="Sort">sort</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="movie_image">movie image</string>
    <string name="movie_title">movie title</string>
    <string name="release_data">RELEASE DATE</string>
    <string name="theMovieInCurrentClickedPosition">theMovieInCurrentClickedPosition</string>
    <string name="overview_header">Overview</string>
    <string name="trailers_header">Trailers</string>
    <string name="reviews_header">Reviews</string>
    <string name="my_favorites">My Favorites</string>

</resources>